--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "private": false,
   "dependencies": {
     "@codler/react-native-keyboard-aware-scroll-view": "2.0.1",
+    "@react-native-picker/picker": "^2.4.1",
     "blueimp-md5": "^2.5.0",
     "clamp": "^1.0.1",
     "color": "~3.1.2",
